# datoviz

./: .clang-format  .clangd  .dockerignore  .envrc  .gitignore  .gitmodules  .valgrind.exceptions.txt  AGENTS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile_U1804  Dockerfile_ubuntu  Dockerfile_wheel  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  WINDOW_CANVAS_PLAN.md  export.map  justfile  make-wheel.sh  manage.bat  manage.sh  mkdocs.yml  postdocker.sh  pyproject.toml  pyrightconfig.json  requirements-build.txt  requirements-dev.txt  setup-env.bat  setup-env.sh  setup.py  symbols.map  tests.py  (+7 more)
src/: CMakeLists.txt  _atomic.cpp  _error.c  _list.c  _list.cpp  _map.cpp  _math.c  _mutex.c  _pointer.h  _prng.cpp  _shaders.h  _thread.c  _version.c  agg.c  alloc.c  alloc.cpp  app.c  array.c  axes.c  axes.h  axes_3D.c  axes_3D.h  backend.c  basic.c  board.c  board_utils.h  builtin_visuals.c  canvas.c  canvas_utils.h  canvas_window.c  client.c  client_input.c  client_utils.h  colormaps.c  common.c  constants.c  context.c  context_utils.h  controls.c  datalloc.c  (+90 more)
src/canvas/: CMakeLists.txt  canvas.c  canvas_internal.h  canvas_stream.c  swapchain_sink.c  window_surface.c
src/canvas/shaders/: swizzle.frag  swizzle.vert
src/canvas/tests/: test_canvas.c  test_canvas.h
src/color/: _color.h
src/common/: CMakeLists.txt  _alloc.c  _alloc.h  _assert.c  _assert.h  _assertions.h  _compat.h  _enums.h  _env.h  _error.c  _error.h  _log.h  _macros.h  _math.c  _mutex.c  _mutex.h  _obj.h  _time_utils.h  _version.c  assert.c  error.c  log.c  log.h  math.c  mutex.c  obj.c  obj.h  version.c
src/common/tests/: test_alloc.c  test_common.c  test_common.h  test_obj.c
src/ds/: CMakeLists.txt  list.c  list_structs.h  map.cpp
src/ds/tests/: test_ds.c  test_ds.h  test_list.c  test_map.c
src/fileio/: CMakeLists.txt  fileio.cpp
src/fileio/tests/: test_fileio.c  test_fileio.h
src/glsl/: colormaps.glsl  common.glsl  common2.glsl  graphics_basic.frag  graphics_basic.vert  graphics_image.frag  graphics_image_cmap.frag  graphics_marker.frag  graphics_marker.vert  graphics_marker_agg.frag  graphics_mesh.frag  graphics_mesh.vert  graphics_path.frag  graphics_path.vert  graphics_point.frag  graphics_point.vert  graphics_points.frag  graphics_points.vert  graphics_raster.vert  graphics_segment.vert  graphics_text.frag  graphics_text.vert  graphics_volume.frag  graphics_volume.vert  graphics_volume_image.frag  graphics_volume_slice.frag  markers.glsl  segment.glsl  text_frag.glsl  text_pos.glsl
src/input/: CMakeLists.txt  input_router.c  keyboard.c  pointer.c
src/input/tests/: test_input.c  test_input.h
src/math/: CMakeLists.txt  anim.c  array.c  array_structs.h  box.c  mock.c  parallel.c  prng.cpp  rand.c  stats.c  vec.c
src/math/tests/: test_anim.c  test_array.c  test_box.c  test_math.c  test_math.h  test_prng.c  test_stats.c
src/scene/: animation.c  app.c  arcball.c  array.c  atlas.cpp  axes.c  axis.c  baker.c  box.c  camera.c  colorbar.c  colormaps.c  demo.c  dual.c  env_utils.h  fly.c  font.c  geometry.cpp  graphics.c  graphics_data.c  grid.c  labels.c  labels_utils.h  meshobj.cpp  mvp.c  ortho.c  panzoom.c  params.c  plot.c  ref.c  scene.c  sdf.cpp  shape.c  texture.c  ticks.c  transform.c  viewport.c  viewset.c  visual.c
src/scene/glsl/: README  graphics_basic.frag  graphics_basic.vert  graphics_fake_sphere.frag  graphics_fake_sphere.vert  graphics_glyph.frag  graphics_glyph.vert  graphics_image.frag  graphics_image.vert  graphics_marker.frag  graphics_marker.vert  graphics_mesh.frag  graphics_mesh.vert  graphics_monoglyph.frag  graphics_monoglyph.vert  graphics_path.frag  graphics_path.vert  graphics_point.frag  graphics_point.vert  graphics_raster.frag  graphics_raster.vert  graphics_segment.frag  graphics_segment.vert  graphics_slice.frag  graphics_slice.vert  graphics_sphere.frag  graphics_sphere.vert  graphics_trivial.frag  graphics_trivial.vert  graphics_volume.frag  graphics_volume.vert  graphics_volume_slice.vert  graphics_wiggle.frag  graphics_wiggle.vert  grid.frag  grid.vert  params_glyph.glsl  params_mesh.glsl
src/scene/visuals/: basic.c  fake_sphere.c  glyph.c  image.c  marker.c  mesh.c  monoglyph.c  path.c  pixel.c  point.c  segment.c  slice.c  sphere.c  volume.c  wiggle.c
src/shaders/: antialias.glsl  area.frag  area.vert  arrow.frag  arrow.vert  arrows.glsl  axes.frag  axes.glsl  axes.vert  axes_3D.frag  axes_3D.glsl  axes_3D.vert  axes_3D_text.frag  axes_3D_text.vert  axes_text.frag  axes_text.vert  axrect.frag  axrect.vert  color.glsl  colorbar.frag  colorbar.vert  colormaps.glsl  common.glsl  constants.glsl  fake_sphere.frag  fake_sphere.vert  image.frag  image.vert  image_cmap.frag  lighting.glsl  markers.frag  markers.glsl  markers.vert  markers_transient.frag  markers_transient.vert  mesh.frag  mesh.vert  mesh_flat.frag  mesh_flat.vert  mesh_raw.frag  (+27 more)
src/stream/: CMakeLists.txt  frame_stream.c  sink_registry.c  stream.c
src/stream/tests/: test_stream.c  test_stream.h
src/thread/: CMakeLists.txt  atomic.cpp  fifo.c  fifo_structs.h  thread.c
src/thread/tests/: test_fifo.c  test_thread.c  test_thread.h
src/video/: CMakeLists.txt  encoder.h  encoder_backend.c  encoder_backend.h  encoder_backend_kvazaar.c  encoder_backend_kvazaar_stub.c  encoder_backend_nvenc.c  encoder_backend_stub.c  encoder_core.c  encoder_internal.h  encoder_mux_mp4.c  video.c  video_sink.c
src/video/tests/: test_video.c  test_video.h  test_video_common.c  test_video_common.h  test_video_kvazaar.c  (+2 more)
src/vk/: CMakeLists.txt  bootstrap.c  device.c  gpu.c  instance.c  macros.h  memory.c  queues.c  types.h  validation.h
src/vklite/: CMakeLists.txt  buffers.c  commands.c  compute.c  descriptors.c  graphics.c  images.c  proto.c  rendering.c  sampler.c  shader.c  slots.c  sync.c  types.h
src/wasm/: log.c
src/window/: CMakeLists.txt  backend_glfw.c  backend_headless.c  backend_qt.c  window_host.c  window_internal.h
testing/: CMakeLists.txt  dvz_public_header_probe.c  dvztest.c  testing.cpp  testing.h
(+1295 files in other folders)
