[build-system]
requires = ["setuptools", "wheel", "tqdm", "pyparsing"]
build-backend = "setuptools.build_meta"

[project]
name = "datoviz"
dependencies = ["numpy"]
version = "0.2.1-dev"
description = "A C library for high-performance GPU scientific visualization"
authors = [
    { name = "Cyrille Rossant", email = "cyrille.rossant@datoviz.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["visualization", "scientific visualization", "vulkan", "gpu", "datoviz"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["datoviz"]
package-data = {"datoviz" = [
    "lib*",
    "*.so",
    "*.dll",
    "*.dylib",
    "*.json",
]}

[project.urls]
"Homepage" = "https://datoviz.com"
"Documentation" = "https://datoviz.com/docs"
"Source" = "https://github.com/datoviz/datoviz"
