[build-system]
requires = ["setuptools", "wheel", "tqdm", "pyparsing"]
build-backend = "setuptools.build_meta"

[project]
name = "datoviz"
requires-python = ">=3.8"  # 3.10 actually required but need this temporarily for almalinux build
dependencies = ["numpy", "requests", "platformdirs"]
version = "0.3.2-dev"
description = "Datoviz: high-performance rendering for scientific data visualization"
authors = [
    { name = "Cyrille Rossant", email = "cyrille.rossant@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["visualization", "scientific visualization", "vulkan", "gpu", "datoviz"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["datoviz"]
package-data = {"datoviz" = [
    "lib*",
    "*.so",
    "*.dll",
    "*.dylib",
    "*.json",
]}

[project.urls]
"Homepage" = "https://github.com/datoviz/datoviz"
"Documentation" = "https://github.com/datoviz/datoviz"
"Source" = "https://github.com/datoviz/datoviz"

[tool.ruff]
format.quote-style = "single"
exclude = [
    "datoviz/_ctypes.py",
    "datoviz/backends/*.py",
]
line-length = 99
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (docstring checks)
    "UP",   # pyupgrade (modernize Python syntax)
    "B",    # flake8-bugbear (best practices)
    "C4",   # flake8-comprehensions
    "S",    # flake8-bandit (security)
]
lint.extend-select = [
    "C4",
    "LOG",
    "G",
    "PIE",
    "TID",
    "FLY",
    "E",
    "W",
    "PGH",
    "PLE",
    "UP",
]
lint.ignore = [
    "C408",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D413",
    "D415",
    "N802",
    "N806",
    "N813",
    "N816",
    "S101",
    "PGH004",
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["D103"]

#    "F",      # TODO: enable Pyflakes rules
#    "C408",   # Unnecessary `dict()` call (rewrite as a literal)
#    "PIE790", # Unnecessary `pass` statement
#    "E241",   # Multiple spaces after comma
#    "E251",   # Unexpected spaces around keyword / parameter equals
#    "E265",   # Block comment should start with `# `
#    "E266",   # Too many leading `#` before block comment
#    "E302",   # TODO: Expected 2 blank lines, found 1
#    "E402",   # Module level import not at top of file
#    "E501",   # TODO: Line too long
#    "E712",   # Avoid equality comparisons to `True` or `False`
#    "E721",   # TODO: Use `is` and `is not` for type comparisons, or `isinstance()` for isinstance check
#    "E731",   # Do not assign a `lambda` expression, use a `def`
#    "E741",   # Ambiguous variable name
#    "UP015",  # Unnecessary mode argument
#    "UP031",  # TODO: Use format specifiers instead of percent format
